<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main"
    tools:context=".view.weather.WeatherActivity">

    <TextView
        android:id="@+id/no_data_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:text="@string/weather_activity_no_data"
        android:visibility="visible"
        />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/weather_card_horizontal_margin"
        android:paddingRight="@dimen/weather_card_horizontal_margin"
        android:paddingTop="@dimen/weather_card_vertical_margin"
        android:paddingBottom="@dimen/weather_card_vertical_margin"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:id="@+id/titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                >

                <TextView
                    android:id="@+id/current_condition_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_activity_current_condition"
                    style="@style/CardFirstItem"
                    />

                <TextView
                    android:id="@+id/temperature_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_activity_temperature"
                    style="@style/CardItem"
                    />

                <TextView
                    android:id="@+id/wind_speed_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_activity_wind_speed"
                    style="@style/CardItem"
                    />

                <TextView
                    android:id="@+id/wind_direction_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_activity_wind_direction"
                    style="@style/CardItem"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                >

                <TextView
                    android:id="@+id/current_condition_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CardFirstItem"
                    />

                <TextView
                    android:id="@+id/temperature_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CardItem"
                    />

                <TextView
                    android:id="@+id/wind_speed_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CardItem"
                    />

                <TextView
                    android:id="@+id/wind_direction_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CardItem"
                    />

            </LinearLayout>

            <ImageView
                android:id="@+id/weather_activity_weather_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/icon_size"
                android:minHeight="@dimen/icon_size"
                android:paddingLeft="@dimen/weather_card_horizontal_margin"
                android:paddingRight="@dimen/weather_card_horizontal_margin"
                android:paddingTop="@dimen/weather_card_vertical_margin"
                android:paddingBottom="@dimen/weather_card_vertical_margin"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/weather_activity_icon"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/outdated_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:text="@string/weather_activity_outdated_data"
        android:visibility="gone"
        />

</LinearLayout>
